--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@
 :root {
   --primary-text-color: #757575;
   --main-background-color: #ffffff;
+  --secondary-white-background: #e5e5e5;
+  --tertiary-white-background: #f5f4fa;
   --title-text-color: #212121;
   --accent-color: #2196f3;
   --dark-background: #2f303a;
@@ -18,45 +20,67 @@
 
 body {
   font-family: Roboto, sans-serif;
-  background-color: var(--main-background-color);
   color: var(--primary-text-color);
 }
-
-.logo-link {
-  color: var(--title-text-color);
+/*   Цвет фона секций страницы портфолио */
+.header {
+  background-color: var(--main-background-color);
+}
+.main {
+  background-color: var(--secondary-white-background);
+}
+/* Оформление надписи логотипа вверху и внизу*/
+.footer-logo-link,
+.header-logo-link {
   font-family: Raleway, serif;
+  font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
   text-decoration: none;
 }
+
+.header-logo-link {
+  color: var(--title-text-color);
+}
+.footer-logo-link {
+  color: var(--main-background-color);
+}
+
+/* Делает слово  web в логотипе голубым */
 .logo-web {
   color: var(--accent-color);
 }
 
+/*  Секция герой на странице студии */
 .hero {
-  color: var(--main-background-color);
   background-color: var(--dark-background);
+}
+.hero-title {
+  color: var(--main-background-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 
 .hero-button {
+  font-family: inherit;
   color: var(--main-background-color);
   background-color: var(--accent-color);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.8;
-  text-align: center;
   letter-spacing: 0.06em;
 }
+
+/* Утилитный класс */
 .list {
   list-style-type: none;
 }
+
+/* Главная навигация страницы */
 .site-nav {
   color: var(--title-text-color);
   font-weight: 500;
@@ -75,6 +99,7 @@ body {
   color: var(--accent-color);
 }
 
+/* Оформление контактов в хэдере */
 .contact-info {
   font-weight: 500;
   font-size: 14px;
@@ -91,7 +116,8 @@ body {
   color: var(--accent-color);
 }
 
-.page-filter {
+.filter-button {
+  font-family: inherit;
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -124,16 +150,24 @@ body {
 .feature-description {
   color: var(--primary-text-color);
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.7;
   letter-spacing: 0.03em;
 }
 
 .section-title {
   color: var(--title-text-color);
-  font-weight: bold;
+  font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+}
+
+.section-work {
+  background-color: var(--secondary-white-background);
+}
+
+.section-team {
+  background-color: var(--tertiary-white-background);
 }
 
 .teamplayer-name {
@@ -151,7 +185,7 @@ body {
   letter-spacing: 0.03em;
 }
 
-.project-portfolio {
+.project-title {
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -178,19 +212,17 @@ body {
 
 .address-first-item {
   color: var(--main-background-color);
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  text-decoration-line: none;
-  font-style: normal;
 }
+.address-item {
+  color: var(--secondary-text-color);
+}
+
+.address-first-item,
 .address-item {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
-  font-style: normal;
   text-decoration-line: none;
+  font-style: normal;
 }
